共同開発の微調整

--- a/index.html
+++ b/index.html
@@ -346,76 +346,10 @@
         </div>
       </div>
 
-      <h3 class="content_title">Weight-Management</h3>
-      <div class="container">
-        <div class="left_space">
-          <p>制作したアプリへのリンク</p>
-          <a href="https://www.weight-controller.site/" target="_blank"><img src="image/top_logo2.png" alt="Weight-Controller"></a>
-          <p>制作したゲームの実行画面動画</p>
-          <video autoplay muted playsinline controls src="image/weight_movie.mov" class="capture_video"></video>
-        </div>
-        <div class="right_space">
-          <section class="flex">
-            <div class="icon">
-              <i class="fas fa-chalkboard"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">アプリの概要</h4>
-              <ul>
-                <li>・『体重』「歩数」を入力しグラフで表示するアプリ </li>
-                <li>・RailsのChart.jsとJavaScriptを使ってグラフ処理を実装してみたく作ったアプリ</li>
-                <li>・Rails5とRails6のバージョンの違いを理解するために作成しました</li>
-              </ul>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="fas fa-code"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">ソースコード</h4>
-              <a href="https://github.com/maruuchi/health_care" class="github blue-link" target="_blank">GitHub(Weight_Management)</a>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-lightbulb"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">こだわりポイント</h4>
-              <ul>
-                <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
-                <li>・体重とカロリーの二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
-                <li>・Deviseを使用したログイン機能実装</li>
-                <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
-                <li>・carrierwaveを使用した画像の投稿機能の実装（現在製作中）</li>
-                <li>・こちらもAWS上で動作しております</li>
-              </ul>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-gem"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">使用したGem</h4>
-              <ul>
-                <li>・Chart.js：グラフ描写</li>
-                <li>・gon：データ受け渡し</li>
-                <li>・Devise：ログイン機能</li>
-                <li>・RSpec：テストコード</li>
-                <li>・pry-byebug：アプリデバッグ</li>
-                <li>・flatpickr：カレンダー機能</li>
-              </ul>
-            </div>
-          </section>
-        </div>
-      </div>
-
       <h3 class="content_title">学習記録アプリ<br>（共同開発）</h3>
       <div class="container">
         <div class="left_space">
-          <p>↓同開発で制作中のアプリイメージ</p>
+          <p>↓共同開発で制作中のアプリイメージ</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300" alt="共同開発中のアプリのイメージ"></a>
           <p>↓共同開発で使用したTrello</p>
           <a href="image/terllo_kyodo.png" data-lightbox="group"></a><img src="image/terllo_kyodo.png" width="300"
