個人サービスの改善

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・オフラインで教えています</li>
+                <li>・オフラインで教えています(今後はオンラインでも検討しております)</li>
               </ul>
             </div>
           </section>
