個人サービスの微調整

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               <h4 class="top_info">サービス概要</h4>
               <ul>
                 <li>・無料でパーソナルトレーニングを教えています</li>
-                <li>・お客様の要望（痩せたい・筋肉をつけたいなど）に沿ったメニュー作成</li>
+                <li>・お客様の要望（痩せたい・筋肉を付けたいなど）に沿ったメニュー作成</li>
               </ul>
             </div>
           </section>
