共同開発の追加準備

--- a/index.html
+++ b/index.html
@@ -385,6 +385,42 @@
           </section>
         </div>
       </div>
+
+      <div class="container">
+        <div class="left_space">
+          <p>↓共同開発で制作中のアプリイメージ</p>
+          <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
+            alt="共同開発中のアプリのイメージ"></a>
+        </div>
+        <div class="right_space">
+          <section class="flex">
+            <div class="icon">
+              <i class="fas fa-chalkboard"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">アプリの概要</h4>
+              <ul>
+                <li>・日々学習した内容を記録し、参加者みんなで評価し合うアプリ</li>
+                <li>・PM＋4人チームで共同開発で制作</li>
+              </ul>
+            </div>
+          </section>
+          <section class="flex">
+            <div class="icon">
+              <i class="far fa-lightbulb"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">こだわりポイント</h4>
+              <ul>
+                <li>・所属しているオンラインサロンのメンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
+                <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
+                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
+                <li>・参加メンバーと相談して現在ブラッシュアップ中</li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </div>
     </section>
     <section class="text-center padding_top" id="section5">
       <div class="front_text">Javascript<h2 class="back_text">Javascript</h2></div>
