追加する共同開発の微調整

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
       <div class="container">
         <div class="left_space">
-          <p>↓共同開発で制作中のアプリイメージ</p>
+          <p>↓担当したページ</p>
           <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
             alt="共同開発中のアプリのイメージ"></a>
         </div>
