共同開発の写真の追加

--- a/index.html
+++ b/index.html
@@ -389,9 +389,13 @@
       <h3 class="content_title">旅行予約サイトアプリ<br>（共同開発）</h3>
       <div class="container">
         <div class="left_space">
-          <p>↓担当したページ</p>
-          <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300"
-            alt="共同開発中のアプリのイメージ"></a>
+          <p>↓担当したページの一部</p>
+          <a href="image/kyodokaihatsu2.png" data-lightbox="group"></a><img src="image/kyodokaihatsu2.png" width="300"
+            alt="共同開発アプリの一部"></a>
+          
+          <p>↓担当したページの一部</p>
+          <a href="image/kyodokaihatsu3.png" data-lightbox="group"></a><img src="image/kyodokaihatsu3.png" width="300"
+            alt="共同開発アプリの一部"></a>
         </div>
         <div class="right_space">
           <section class="flex">
