--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             <div class="info">
               <h4 class="top_info">アプリの概要</h4>
               <ul>
-                <li>・日々学習した内容を記録し、参加者みんなで評価し合うアプリ</li>
+                <li>・ホテルの予約をするアプリ</li>
                 <li>・PM＋4人チームで共同開発で制作</li>
               </ul>
             </div>
@@ -417,7 +417,7 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・所属しているオンラインサロンのメンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
+                <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
                 <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
                 <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
                 <li>・参加メンバーと相談して現在ブラッシュアップ中</li>
