共同開発の文章の変更

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               <h4 class="top_info">アプリの概要</h4>
               <ul>
                 <li>・ホテルの予約をするアプリ</li>
-                <li>・PM＋4人チームで共同開発で制作</li>
+                <li>・現役のエンジニア＋4人チームで共同開発で制作</li>
               </ul>
             </div>
           </section>
@@ -418,9 +418,8 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
-                <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
-                <li>・GitHubからCloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
-                <li>・参加メンバーと相談して現在ブラッシュアップ中</li>
+                <li>・Zoomを使用してどこまでやるのかを決めていました</li>
+                <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
             </div>
           </section>
