共同開発のこだわりポイント修正

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
-                <li>・Zoomを使用してどこまでやるのかを決めていました</li>
+                <li>・Zoomで定期的にMTを開催してどこまでやるのかを決めていました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
             </div>
