共同開発の削除及び追加

--- a/index.html
+++ b/index.html
@@ -346,46 +346,6 @@
         </div>
       </div>
 
-      <h3 class="content_title">学習教材アプリ<br>（共同開発）</h3>
-      <div class="container">
-        <div class="left_space">
-          <p>↓共同開発で制作中のアプリイメージ</p>
-          <a href="image/kyodokaihatsu.png" data-lightbox="group"></a><img src="image/kyodokaihatsu.png" width="300" alt="共同開発中のアプリのイメージ"></a>
-          <p>↓共同開発で使用したTrello</p>
-          <a href="image/terllo_kyodo.png" data-lightbox="group"></a><img src="image/terllo_kyodo.png" width="300"
-            alt="共同開発中のアプリのイメージ"></a>
-          <p>※両方の画像ともPhotoshopで編集</p>
-        </div>
-        <div class="right_space">
-          <section class="flex">
-            <div class="icon">
-              <i class="fas fa-chalkboard"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">アプリの概要</h4>
-              <ul>
-                <li>・学習教材アプリ</li>
-                <li>・PM＋4人チームで共同開発を実施</li>
-              </ul>
-            </div>
-          </section>
-          <section class="flex">
-            <div class="icon">
-              <i class="far fa-lightbulb"></i>
-            </div>
-            <div class="info">
-              <h4 class="top_info">こだわりポイント</h4>
-              <ul>
-                <li>・所属するオンラインサロンのメンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
-                <li>・trelloでタスクを管理。挑戦したいタスクを作成、参加し、完了したらタスクステータスを完了にする</li>
-                <li>・GitHubからcloneして、ローカル環境で作った機能をGitHubのリモートリポジトリへpushし、プルリクを送付。メンターの方にレビューしていただき問題が無ければマージしていただく。</li>
-                <li>・参加メンバーと相談して現在ブラッシュアップ中</li>
-              </ul>
-            </div>
-          </section>
-        </div>
-      </div>
-
       <h3 class="content_title">旅行予約サイトアプリ<br>（共同開発）</h3>
       <div class="container">
         <div class="left_space">
@@ -406,7 +366,7 @@
               <h4 class="top_info">アプリの概要</h4>
               <ul>
                 <li>・ホテルの予約をするアプリ</li>
-                <li>・現役のエンジニア＋4人チームで共同開発で制作</li>
+                <li>・参加しているオンラインサロンの現役のエンジニア＋4人チームで共同開発で制作</li>
               </ul>
             </div>
           </section>
