職務経歴の微調整

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     半年間、警察学校で訓練を受け、卒業後は警察署の地域課に配属されて交番勤務をしました。<br>
                     警察学校で様々な訓練を行い、<span class="red-bold">自ら取り組む姿勢</span>や学生時代の経験を高く評価され、高校卒業の方々の指導にもあたりました。<br>
                     地域課に配属後、事件や事故の対応、巡回連絡を実施し地域の安全の確保に努めました。<br>また警察官の頻繁な異動による担当地域の情報不足という問題を解決するため休日に管轄地域を巡回しました。主に地理把握につとめ、感じた事をメモし、
-                    また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。<br>
+                    また上司や先輩、地域住民の方々に、危険箇所、交通事故多発地域等を聞き込み情報収集を実施。
                     メモして感じた事、収集した情報を基に地図に落とし込み、異動者に情報提供しました。<br>
                   </div>
                   <div class="result">
