体調管理アプリの名前変更

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <section class="text-center padding_top" id="section3">
       <div class="front_text">Ruby on Rails<h2 class="back_text">Ruby on Rails</h2></div>
-        <h3 class="content_title">体調管理アプリ</h3>
+        <h3 class="content_title">体重管理アプリ</h3>
         <div class="container">
         
           <div class="left_space">
