2020年に学習したプログラミングスキルの調整
q
exit

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                 <li>・Ruby on Rails</li>
                 <li></li>
               </ul>
-              <p>※成果物については下記参照ください</p>
+              <p>
+                <span class="red-bold">※成果物については下記参照ください</span>
+              </p>
             </div>
           </section>
           <section class="flex">
