体重管理アプリののこだわりポイントの変更

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <h4 class="top_info">こだわりポイント</h4>
                 <ul>
                   <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
-                  <li>・体重とカロリーの二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
+                  <li>・体重と歩数の二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
                   <li>・Deviseを使用したログイン機能実装</li>
                   <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
                   <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
