ポートフォリオの概要の微調整

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                   <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
                   <li>・体重と歩数の二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
                   <li>・Deviseを使用したログイン機能実装</li>
-                  <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
                   <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
-                  <li>・Rails5はHerokuにデプロイ→<a href="https://healthcare5.herokuapp.com/" target="_blank" class="blue-link">Rails5バージョン</a></li>
+                  <li>・Rails5はHerokuへデプロイ→<a href="https://healthcare5.herokuapp.com/" target="_blank" class="blue-link">Rails5バージョン</a></li>
                   <li>・Rails6とRails5で作成し、バージョンによる違いを認識</li>
+                  <li>・RSpecを使用してテストコードの実装（現在作成中）</li>
                 </ul>
                 <p class="red-bold pt_30">→AWSとHerokuへのデプロイ、ログイン機能、Gemの導入理解</p>
               </div>
@@ -368,7 +368,7 @@
             <div class="info">
               <h4 class="top_info">アプリの概要</h4>
               <ul>
-                <li>・ホテルの予約をするアプリ</li>
+                <li>・オススメのホテルを予約するアプリ</li>
                 <li>・参加しているオンラインサロンの現役のエンジニア＋4人チームで共同開発で制作</li>
               </ul>
             </div>
