--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                     国民の安全・安心を守るという使命感に惹かれ警察官になりました。<br>
                     半年間、警察学校で訓練を受け、卒業後は警察署の地域課に配属されて交番勤務を経験しました。<br>
                     警察学校で様々な訓練を行い、<span class="red-bold">積極的に物事に取り組む姿勢</span>や学生時代の経験を高く評価され、高校卒業の方々の指導にもあたりました。<br>
-                    卒業後は地域課に配属され、事件や事故の対応、巡回連絡を実施し地域の安全の確保に努めました。<br>
-                    警察官は異動が多く担当地域の情報不足という問題に陥りやすいという問題がありました。この問題を解決するため休日に管轄地域を巡回し、主に地理把握に努め、感じた事をメモし、
+                    卒業後は交番勤務を行い、事件や事故の対応、巡回連絡を実施し地域の安全の確保に努めました。<br>
+                    その中で警察官は異動が多く担当地域の情報不足という問題に陥りやすいという問題がありました。この問題を解決するため休日に管轄地域を巡回し、主に地理把握に努め、感じた事をメモし、
                     また上司や先輩、地域住民の方々に、危険箇所や交通事故多発地域等を聞き込み情報収集を実施。
-                    メモして感じた事、収集した情報を基に地図に落とし込み、異動者に情報提供しました。<br>
+                    メモして感じた事、収集した情報を基にマップに落とし込み、異動者に情報共有しました。<br>
                   </div>
                   <div class="result">
                     <span class="red-bold">→継続力、行動力や観察力</span>が身につきました。<br>
@@ -128,7 +128,7 @@
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
-                    作業用工具の費用削減・無駄な作業の効率化を実施。<br>作業用工具の費用削減では費用がかかる原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、作業用工具の費用を<span class="red-bold">10%減少</span>させることに成功。<br>
+                    作業用工具の費用削減・無駄な作業の効率化、新人従業員への教育を実施。<br>作業用工具の費用削減では費用がかかる原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、作業用工具の費用を<span class="red-bold">10%減少</span>させることに成功。<br>
                     各作業工程における作業の必要性を追求し、ムダな作業を徹底的に排除、改善しました。作業する際の時間がかかる作業を洗い出し、効率よく作業できるような作業用台車の作成や作業手順書の見直しを行い、その度に時間を計測。結果として<span class="red-bold">作業時間の短縮（５分）</span>に成功しました。<br>
                     また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減に当たっています。<br>
                     さらに新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
