Rubyのポートフォリオの追加

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <nav class="menu open flex">
         <ul class="flex hover_blue">
           <li><a href="#section1">about me</a></li>
+          <li><a href="#section2">Ruby</a></li>
           <li><a href="#section3">Rails</a></li>
           <li><a href="#section5">JavaScript</a></li>
           <li><a href="#section6">個人サービス</a></li>
@@ -61,6 +62,7 @@
             </div>
             <ul class="hover_blue">
               <li><a href="#section1">about me</a></li>
+              <li><a href="#section2">Ruby</a></li>
               <li><a href="#section3">Rails</a></li>
               <li><a href="#section5">JavaScript</a></li>
               <li><a href="#section6">個人サービス</a></li>
