現職の経歴に関する微調整

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     各作業工程における作業の必要性を追求し、ムダな作業を徹底的に排除、改善しました。作業する際の時間がかかる作業を洗い出し、効率よく作業できるような作業用台車の作成や作業手順書の見直しを行い、その度に時間を計測。結果として<span class="red-bold">作業時間の短縮（５分）</span>に成功しました。<br>
                     また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減に当たっています。<br>
                     さらに新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
-                    誰もやった事のない改善をした事により、上司や作業者達の喜びの顔を見た時に、仕事へのやりがいや充実感を感じます。
+                    誰もやったことのないことや問題を改善した際に、作業者達の喜びの顔を見た時に、仕事へのやりがいや充実感を感じます。
                   </div>
                   <div class="result">
                     <p class="red-bold pt_30">⇨固定概念に囚われない考え方、提案力、効率化を考える力が身につきました</p>
