体重管理アプリの概要の変更

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                   <li>・「体重」と「歩数」を入力しグラフで表示するアプリ</li>
                   <li>・折れ線グラフが「体重」、棒グラフが「歩数」を表します</li>
                   <li>・新規登録せず、ゲストログインしてから数値入力が可能</li>
-                  <li>・期間を指定して、グラフを見ることができます</li>
-                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>                 
+                  <li>・期間別にグラフを見ることができます</li>
+                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能です</li>                 
                 </ul>
               </div>
             </section>
