Rubyゲームのタイトル追加

--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@
       </div>
     </section>
 
+    <section class="text-center back_dark padding_top" id="section2">
+      <div class="front_text">Ruby<h2 class="back_text">Ruby</h2>
+      </div>
+      <h3 class="content_title">対戦</h3>
+      <div class="container">
+      
+      </div>
+    </section>
+
     <section class="text-center padding_top" id="section3">
       <div class="front_text">Ruby on Rails<h2 class="back_text">Ruby on Rails</h2></div>
         <h3 class="content_title">体重管理アプリ</h3>
