Rubyゲームのソースコードの追加

--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
       </div>
       <h3 class="content_title">対戦</h3>
       <div class="container">
+        <div class="right_space">
+          <section class="flex">
+            <div class="icon">
+              <i class="fas fa-code"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">ソースコード</h4>
+              <a href="https://github.com/maruuchi/poke" class="github blue-link"
+                target="_blank">GitHub(Poke)</a>
+              <p>起動ファイルは「main.rb」となっております。</p>
+            </div>
       
       </div>
     </section>
