--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <i class="far fa-hand-point-up"></i>
             </div>
             <div class="info">
-              <h3 class="top_info">2020年に学習したプログラミングスキル</h3>
+              <h3 class="top_info">2020年から2021年に学習したプログラミングスキル</h3>
               <ul>
                 <li>・HTML</li>
                 <li>・CSS</li>
@@ -230,7 +230,8 @@
                 target="_blank">GitHub(Poke)</a>
               <p>起動ファイルは「main.rb」となっております。</p>
             </div>
-      
+          </section>
+        </div>
       </div>
     </section>
 
