Rubyゲームの詳細削除

--- a/index.html
+++ b/index.html
@@ -239,10 +239,8 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・完全にRubyだけを用いて制作したゲーム</li>
+                <li>・Rubyだけを用いてゲームを制作</li>
                 <li>・ゲームを作成することでRubyに関する基礎文法が定着したと実感</li>
-                <li>・「A」が出たら1or11の都合の良い方を選択する、掛け金と点数に応じた支払いロジックを搭載する等、ブラックジャックの基本ルールに準拠</li>
-                <li>・本ゲームを基にした初学者向けのRuby学習教材を作成中</li>
               </ul>
             </div>
           </section>
