「どのようなエンジニアになりたいか」の文章に関する微調整を実施

--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
                 <h4>1.課題解決する</h4>
                 <p>
                   世の中を「より効率的に、より便利に」する力を持つのがIT技術であると考えています。<br>
-                  些細なことでも疑問を感じたら、解決策を考え、課題解決に繋がるように行動します。
+                  ちょっとしたことでも疑問を感じたら、解決策を考え、課題解決に繋がるように行動します。
                 </p>
               </section>
               <section>
                 <h4>2.価値を生む</h4>
                 <p>
                   課題解決を考え改善策を実行し、人々に使っていただいて初めて「価値」に結びつくと考えています。<br>
-                  私が提供するサービスにより多くの人に価値を提供し、喜んで貰える事を常に考えて行動しております。<br>
+                  私が提供するサービスから多くの人に価値を提供し、喜んで貰える事を常に考えて行動しております。<br>
                   また、ITにはそれが実現可能だと思い、ITへの道を志しました。
                 </p>
               </section>
