個人サービスの概要の追加

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <div class="container">
         <div class="left_space">
           <p>↓パーソナルトレーニングをしている様子</p>
-          <a href="image/" data-lightbox="group"><img src="image/" width="300" alt="Personal＿training"></a>
+          <a href="image/" data-lightbox="group"><img src="image/" width="300" alt="Personal＿Training"></a>
         </div>
         <div class="right_space">
           <section class="flex">
@@ -444,6 +444,7 @@
             <div class="info">
               <h4 class="top_info">サービス概要</h4>
               <ul>
+                <li>・トレーニングを通じて体が変化し感動したことを他の人にも共有したいと思い始めました。</li>
                 <li>・無料でパーソナルトレーニングを教えています</li>
                 <li>・お客様の要望（痩せたい・筋肉を付けたいなど）に沿ったメニュー作成</li>
               </ul>
