Rubyゲームの微調整

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <section class="text-center back_dark padding_top" id="section2">
       <div class="front_text">Ruby<h2 class="back_text">Ruby</h2>
       </div>
-      <h3 class="content_title">対戦</h3>
+      <h3 class="content_title">対戦ゲーム</h3>
       <div class="container">
         <div class="right_space">
           <section class="flex">
@@ -240,7 +240,7 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・Rubyだけを用いてゲームを制作</li>
-                <li>・ゲームを作成することでRubyに関する基礎文法が定着したと実感</li>
+                <li>・ゲームを作成することでRubyに関する基礎文法が定着したと実感しました。</li>
               </ul>
             </div>
           </section>
