共同開発のこだわりポイントの改善

--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
               <ul>
                 <li>・オススメのホテルを予約するアプリ</li>
                 <li>・参加しているオンラインサロンの現役のエンジニア＋4人チームで共同開発で制作</li>
+                
               </ul>
             </div>
           </section>
@@ -370,6 +371,7 @@
                 <li>・Zoomで定期的にMTを開催してどこまでやるのかを決めていました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
+              <p class="red-bold pt_30">→Githubの使い方、共同開発を理解</p>
             </div>
           </section>
         </div>
