共同開発に作成した経緯を追加

--- a/index.html
+++ b/index.html
@@ -337,6 +337,15 @@
         <div class="right_space">
           <section class="flex">
             <div class="icon">
+              <i class="fas  fa-plus-circle"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">作成した経緯</h4>
+              <p>現場ではチームとして作業することが多いと知り、早く現場に対応できるように、共同開発をやりました。</p>
+            </div>
+          </section>
+          <section class="flex">
+            <div class="icon">
               <i class="fas fa-chalkboard"></i>
             </div>
             <div class="info">
