--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
-                <li>・Zoomで定期的にMTを開催してどこまでやるのかを決めていました</li>
+                <li>・Zoomで定期的にMTを開催し、どこまでやるのかを決めていました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
               <p class="red-bold pt_30">→Githubの使い方、共同開発を理解</p>
