共同開発のこだわりポイントを追加

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <li>・Zoomで定期的にMTを開催し、どこまでやるのかを決めていました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
-              <p class="red-bold pt_30">→Githubの使い方、共同開発を理解</p>
+              <p class="red-bold pt_30">→マージ、コンフリクト等のGithubの使い方、共同開発を理解</p>
             </div>
           </section>
         </div>
