個人サービスのこだわりポイントの追加

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・オフラインで教えています(今後はオンラインでも検討しております)</li>
+                <li>・トレーニングを教える際、「どこを怪我しやすいのか」や「どこの筋肉を鍛えているのか」を私が実践しながら伝えます</li>
               </ul>
             </div>
           </section>
