Qiita記事のアイコン変更

--- a/index.html
+++ b/index.html
@@ -529,10 +529,10 @@
               <p class="red-bold pt_30">→エラーが出たときや新しい知識を得たときにアウトプットする事を常に心掛けています</p>
             </div>
           </section>
-          <section class="flex">
+          <section class="flex">           
             <div class="icon">
-              <i class="far fa-plus-square"></i>
-            </div>
+              <i class="fas  fa-plus-circle"></i>
+            </div>            
             <div class="info">
               <h4 class="top_info">Qiita記事</h4>
               <p>作成したQiita記事</p>
