--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
               <ul>
                 <li>・同じエラー内容で困っている方の参考になるように記事を作成</li>
                 <li>・ブランチ名を間違えてpushしてしまった時の対処法を丁寧に記載</li>
-                <li>・アウトプットすることで自らの理解度が上昇</li>
+                <li>・アウトプットすることで理解度が上昇</li>
                 <li>・今後も勉強した内容を積極的にアウトプットしていきます</li>
               </ul>
               <p class="red-bold pt_30">→エラーが出たときや新しい知識を得たときにアウトプットする事を常に心掛けています</p>
