体重管理アプリの作成した経緯の追加

--- a/index.html
+++ b/index.html
@@ -262,6 +262,17 @@
         
           <div class="right_space">
             <section class="flex">
+            <div class="icon">
+              <i class="fas  fa-plus-circle"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">作成した経緯</h4>
+              <p>・コロナ禍での運動不足解消</p>
+              <p>・工場勤務でよく歩くため</p>
+              <p>・家族に体重に関するアプリを作成して欲しいと頼まれた</p>
+            </div>
+            </section>
+            <section class="flex">
               <div class="icon">
                 <i class="fas fa-chalkboard"></i>
               </div>
