--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                 <li>・2018年4月 ： 株式会社SUMCO 就職
                   <div class="indent">
                     ITの根幹を担っている半導体用シリコンウェーハの製造で世界トップレベルを誇る会社経営に魅力を感じ、転職を決意しました。<br>
-                    作業用工具の費用削減・無駄な作業の効率化、新人作業員への教育を実施。<br>
-                    ①作業用工具の費用削減では費用がかかる原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、作業用工具の費用を<span class="red-bold">10%減少</span>させることに成功。<br>
-                    ②各作業工程における作業の必要性を追求し、ムダな作業を徹底的に排除、改善しました。作業する際の時間がかかる作業を洗い出し、効率よく作業できるような作業用台車の作成や作業手順書の見直しを行い、その度に時間を計測。結果として<span class="red-bold">作業時間の短縮（５分）</span>に成功しました。<br>
+                    作業用工具の費用削減・無駄な作業の効率化、新人作業員への教育などを実施。<br>
+                    ①作業用工具の費用削減・・・工具の費用がかかる原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、<span class="red-bold">作業用工具の費用を10%減少</span>させることに成功。<br>
+                    ②無駄な作業の効率化・・・各作業工程における作業の必要性を追求し、ムダな作業を徹底的に排除、改善しました。作業する際の時間がかかる作業を洗い出し、効率よく作業できるような作業用台車の作成や作業手順書の見直しを行い、その度に時間を計測。結果として<span class="red-bold">作業時間の短縮（５分）</span>に成功しました。<br>
                     また担当工程における機械による品質悪化の改善、異常発生時の原因の追求と対策に努め、不良品の削減に当たっています。<br>
                     さらに新人社員への教育を行い、新人がいち早く現場での作業に慣れてもらうための教育資料の作成にあたりました。<br>
                     誰もやったことのないことや問題を改善した際に、作業者達の喜びの顔を見た時に、仕事へのやりがいや充実感を感じます。
