--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <li><a href="#section1">about me</a></li>
           <li><a href="#section2">Ruby</a></li>
           <li><a href="#section3">Rails</a></li>
-          <li><a href="#section5">JavaScript</a></li>
-          <li><a href="#section6">個人サービス</a></li>
-          <li><a href="#section7">Other</a></li>
+          <li><a href="#section4">JavaScript</a></li>
+          <li><a href="#section5">共同開発</a></li>
+          <li><a href="#section6">Other</a></li>
         </ul>
       </nav>
 
@@ -63,9 +63,9 @@
               <li><a href="#section1">about me</a></li>
               <li><a href="#section2">Ruby</a></li>
               <li><a href="#section3">Rails</a></li>
-              <li><a href="#section5">JavaScript</a></li>
-              <li><a href="#section6">個人サービス</a></li>
-              <li><a href="#section7">Other</a></li>
+              <li><a href="#section4">JavaScript</a></li>
+              <li><a href="#section5">共同開発</a></li>
+              <li><a href="#section6">Other</a></li>
             </ul>
           </div>
         </div>
