共同開発のタイトル変更

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
     <section class="text-center back_dark padding_top" id="section5">
       <div class="front_text">共同開発<h2 class="back_text">共同開発</h2></div>
-      <h3 class="content_title">旅行予約サイトアプリ<br>（共同開発）</h3>
+      <h3 class="content_title">旅行予約サイトアプリ</h3>
       <div class="container">
         <div class="left_space">
           <p>↓担当したページの一部</p>
