Qiita記事のこだわりポイントの改善

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・同じエラー内容で困っている方の参考になるように記事を作成</li>
+                <li>・同じようなエラーで困っている方の参考になるように記事を作成</li>
                 <li>・ブランチ名を間違えてpushしてしまった時の対処法を丁寧に記載</li>
                 <li>・アウトプットすることで理解度が上昇</li>
                 <li>・今後も勉強した内容を積極的にアウトプットしていきます</li>
