Qiita記事の修正

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
               <h4 class="top_info">Qiita記事</h4>
               <p>作成したQiita記事</p>
               <a href="https://qiita.com/wa-ma/items/094b75a482e4a1bf0a01" target="_blank" 
-              class="blue-link">Githubで作成したブランチ名がmainであることに気付かず、ローカルのブランチ名をmasterのままpushし、エラーが出たときの対処法</a>
+              class="blue-link">【Githubで作成したブランチ名がmainであることに気付かず、ローカルのブランチ名をmasterのままpushし、エラーが出たときの対処法】</a>
             </div>
           </section>
         </div>
