現職の職務経歴の変更

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   </div>
                 </li>
                 
-                <li>・現在、就業中のまま転職活動中</li>
+                <li>※現在、就業中のまま転職活動中</li>
               </ul>
             </div>
           </section>
