--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@
         <div class="right_space">
           <section class="flex">
             <div class="icon">
+              <i class="fas  fa-plus-circle"></i>
+            </div>
+            <div class="info">
+              <h4 class="top_info">作成した経緯</h4>
+              
+            </div>
+          </section>
+          <section class="flex">
+            <div class="icon">
               <i class="fas fa-code"></i>
             </div>
             <div class="info">
