Rubyゲームの作成した経緯の追加

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
             </div>
             <div class="info">
               <h4 class="top_info">作成した経緯</h4>
-              
+              <p>・Rubyの基礎文法を理解するためにアプリを作成</p>
+              <p>・対戦ゲームが好きでアプリを作成したいと思ったため</p>
             </div>
           </section>
           <section class="flex">
