共同開発の微調整

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div>
             <div class="info">
               <h4 class="top_info">作成した経緯</h4>
-              <p>現場ではチームとして作業することが多いと知り、早く現場に対応できるように、共同開発を実施しました。</p>
+              <p>・現場ではチームとして作業することが多いと知り、早く現場に対応できるように、共同開発を実施しました。</p>
             </div>
           </section>
           <section class="flex">
@@ -454,7 +454,7 @@
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
                 <li>・Zoomで定期的にMTGを開催し、いつどこまでやるのかを決めていました</li>
-                <li>メンターの方にレビューしていただいた</li>
+                <li>・メンターの方にレビューしていただいた</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
               <p class="red-bold pt_30">→マージ、コンフリクト等のGithubの使い方、共同開発を理解</p>
