共同開発の微調整

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
                 <li>・Zoomで定期的にMTGを開催し、いつどこまでやるのかを決めていました</li>
-                <li>・メンターの方にレビューしていただいた</li>
+                <li>・メンターの方にレビューしていただきました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
               <p class="red-bold pt_30">→マージ、コンフリクト等のGithubの使い方、共同開発を理解</p>
