体重管理アプリのこだわりポイントを変更

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                   <li>・投稿したデータをModelで処理して、JavaScriptへ値を渡して画面に表示</li>
                   <li>・体重と歩数の二軸を表示。メモリ数値も表示データに応じて動的に変化</li>
                   <li>・Deviseを使用したログイン機能実装</li>
-                  <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)</li>
+                  <li>・Rails6をAWSへデプロイ(VPC,RDS,EC2,ALB,SSL化)する予定</li>
                   <li>・Rails5はHerokuへデプロイ<br>
                     →<a href="https://healthcare5.herokuapp.com/" target="_blank" class="blue-link">Rails5バージョンはこちら</a></li>
                   <li>・Rails6とRails5で作成し、バージョンによる違いを認識</li>
