前職の経歴の変更

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                     半年間、警察学校で訓練を受け、卒業後は警察署の地域課に配属されて交番勤務を経験しました。<br>
                     警察学校で様々な訓練を行い、<span class="red-bold">積極的に物事に取り組む姿勢</span>を高く評価され、高校卒業の方々の指導にもあたりました。<br>
                     卒業後は交番勤務を行い、事件や事故の対応、巡回連絡を実施し地域の安全の確保に努めました。<br>
-                    警察官は<span class="bold">異動が多く新たに担当する地域の情報不足に陥りやすいという問題</span>がありました。この問題を解決するため休日に管轄地域を巡回し、主に地理把握に努め、感じた事をメモし、
-                    また上司や先輩、地域住民の方々に、危険箇所や交通事故多発地域等を聞き込み情報収集を実施しました。
+                    警察官は<span class="bold">異動が多く新たに担当する地域の情報不足に陥りやすいという問題</span>がありました。この問題を解決するため休日に管轄地域を巡回し、主に地理把握に努めて感じた事をメモし、
+                    また上司や先輩、地域住民の方々に危険箇所や交通事故多発地域等を聞き込み情報収集を実施しました。
                     メモしたことや収集した情報を基にマップに落とし込み、異動者に情報共有しました。<br>
                     異動者からは<span class="red-bold">「分かりやすく、地域の情報収集に非常に役立つ」と評価</span>されました。
                   </div>
