--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h4>1.課題解決する</h4>
                 <p>
                   世の中を「より効率的に、より便利に」する力を持つのがIT技術であると考えています。<br>
-                  ちょっとしたことでも疑問を感じたら、解決策を考え、課題解決に繋がるように行動します。
+                  小さなことでも疑問を感じたら、解決策を考え、解決に繋がるように行動します。
                 </p>
               </section>
               <section>
