どのような業務をしたいかの改善

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h3 class="top_info">どのような業務をしたいか</h3>
               <p>
                 <span class="red-bold">多くの人に価値を提供でき、画期的で面白いアプリケーションの開発</span>に携わりたいです。<br>
-                そのために必要な言語やスキルを常に取り入れていける環境で、知識の吸収につとめ、進んで行動し、常にコミュニケーションを取り、学ぶ姿勢を忘れず、働きたいと考えております。
+                そのために必要な言語やスキルを常に取り入れていける環境で、知識の吸収に務めて、進んで行動し、常にコミュニケーションを取り、学ぶ姿勢を忘れずに働きたいと考えております。
               </p>
             </div>
           </section>
