--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             </div>
             <div class="info">
               <h4 class="top_info">作成した経緯</h4>
-              <p>・私自身のコロナ禍での運動不足解消</p>
-              <p>・工場勤務で頻繁に歩く方々や体重が気になる方に向けて作成しました。</p>
+              <p>・コロナ禍での運動不足解消</p>
+              <p>・仕事で頻繁に歩く方々や体重が気になる方に向けて作成しました。</p>
             </div>
             </section>
             <section class="flex">
