『体重管理アプリ』のアプリの概要の調整

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   <li>・折れ線グラフが「体重」、棒グラフが「歩数」を表します</li>
                   <li>・新規登録せず、ゲストログインしてから数値入力が可能</li>
                   <li>・期間別にグラフを見ることができます</li>
-                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能です</li>                 
+                  <li>・間違えて値を入力した場合、記録修正ボタンから編集が可能</li>                 
                 </ul>
               </div>
             </section>
