共同開発の『こだわりポイント』の変更

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
                 <li>・メンター１人(現役エンジニア)がPMとなり、参加者４人と一緒にアプリ開発</li>
-                <li>・Zoomで定期的にMTGを開催し、いつどこまでやるのかを決めていました</li>
+                <li>・Zoomで定期的にMTGを行い、いつどこまでやるのかを決めていました</li>
                 <li>・メンターの方にレビューしていただきました</li>
                 <li>・参加メンバーと相談してブラッシュアップしていく予定</li>
               </ul>
