共同開発の『作成した経緯』の変更

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             </div>
             <div class="info">
               <h4 class="top_info">作成した経緯</h4>
-              <p>・現場ではチームとして作業することが多いと知り、早く現場に対応できるように、共同開発を実施しました。</p>
+              <p>・現場ではチームとして作業することが多いと知り、早く現場での活動に対応できるように、共同開発を実施しました。</p>
             </div>
           </section>
           <section class="flex">
