--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <section class="text-center padding_top" id="section4">
       <div class="front_text">Javascript<h2 class="back_text">Javascript</h2></div>
-      <h3 class="content_title">スロットゲーム</h3>
+      <h3 class="content_title">タイピングゲーム</h3>
       <div class="container">
         <div class="left_space">
           <p>制作したゲームへのリンク</p>
