--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                     作業用工具の費用削減・無駄な作業の効率化などを実施。<br>
                     ①作業用工具の費用削減・・・工具の費用がかかる原因を論理的に考え分析し、その都度仮説を立てて原因を追求。その結果、<span class="red-bold">作業用工具の費用を10%減少</span>させることに成功。<br>
                     ②無駄な作業の効率化・・・各作業工程における作業の必要性を追求し、ムダな作業を徹底的に排除、改善しました。時間がかかる作業を洗い出し、効率よく作業できるような作業用台車の作成や作業手順書の見直しを行い、その度に時間を計測。結果として<span class="red-bold">作業時間の短縮（５分間の短縮）</span>に成功しました。<br>
-                  
-                    他にも担当工程における機械による品質悪化の改善や異常発生時の原因の追求と対策、新人社員への教育をにあたりました。<br>
+                    ③その他・・・担当工程における機械による品質悪化の改善や異常発生時の原因の追求と対策、新人社員への教育をにあたりました。<br>
                     誰もやったことのないことや問題を改善した際に、作業者達の喜びの顔を見た時に、仕事へのやりがいや充実感を感じます。
                   </div>
                   <div class="result">
