Javascriptポートフォリオの概要変更

--- a/index.html
+++ b/index.html
@@ -385,11 +385,9 @@
             <div class="info">
               <h4 class="top_info">こだわりポイント</h4>
               <ul>
-                <li>・Javascript学習時に作成したゲーム</li>
-                <li>・STARTボタンを押すとSTOPボタンを押せる様になる。STOPボタンを一度押すとそのボタンは押せなくなる等の制御を実装</li>
-                <li>・ケース別に出目の出現率が変更される。3連チェリー後の次変動では出目の出現率が大きく変更</li>
-                <li>・0.05秒ごとにランダムでパネル画像を表示することで、SLOTパネルの回転を表現</li>
-                <li>・SLOTでお金を増やすだけではなく、アイテムを購入して女の子の好感度を上げるといったゲーム性を追加</li>
+                <li>・Javascript学習時に作成</li>
+                <li>・STARTボタンを押すとSTOPボタンを押せる様になる。</li>
+                <li>・STOPボタンを押すとSTARTボタンと RESETボタンを押せるようになる</li>
               </ul>
             </div>
           </section>
