JSのポートフォリオの追加

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <div class="info">
               <h4 class="top_info">アプリの概要</h4>
               <ul>
-                <li>・Javascriptで動作するスロットゲーム</li>
+                <li>・Javascriptで作成したストップウォッチ</li>
                 <li>・Startボタンを押すとスロットが動きランダムで図柄が表示</li>
                 <li>・止まった図柄に応じてお金が貰える</li>
                 <li>・お金が増えるとアイテムを購入でき、購入したアイテムで女の子の好感度を上げればゲームクリア</li>
@@ -375,7 +375,7 @@
             </div>
             <div class="info">
               <h4 class="top_info">ソースコード</h4>
-              <a href="https://github.com/risottoupdate/slot" class="github blue-link">GitHub(slot)</a>
+              <a href="https://github.com/maruuchi/StopWatch.git" class="github blue-link">GitHub(watch)</a>
             </div>
           </section>
           <section class="flex">
