Twitterアカウントの変更

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@MaruSo_trainig">
-  <meta name="twitter:creator" content="@MaruSo_trainig">
+  <meta name="twitter:site" content="@MaruSo_career">
+  <meta name="twitter:creator" content="@MaruSo_career">
   <meta name="twitter:title" content="丸内綜馬ポートフォリオサイト">
   <meta name="twitter:description" content="職務経歴書、制作物一覧">
   <meta name="twitter:image:src" content="/image/twitter-card.png">
@@ -80,7 +80,7 @@
           <img src="image/profile.photo.png" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
           <div class="sns">
             <ul class="text_center">
-              <li><a href="https://twitter.com/MaruSo_trainig" class="twitter" target="_blank">Twitter</a></li>
+              <li><a href="https://twitter.com/MaruSo_career" class="twitter" target="_blank">Twitter</a></li>
               <li><a href="https://github.com/maruuchi" class="github" target="_blank">GitHub</a></li>
               <li><a href="https://qiita.com/wa-ma" class="Qiita" target="_blank">Qiita</a></li>
               <li><a href="mailto:soma66maruuchi@gmail.com" class="email" target="_blank">E-mail</a></li>
