--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </nav>
 
-      <!--ハンバーガーメニューの中-->
+      <!--ハンバーガーメニュー-->
       <nav class="menu" id="nav-drawer">
         <input id="nav-input" type="checkbox" class="nav-unshown">
         <label id="nav-open" for="nav-input"><span></span></label>
@@ -218,6 +218,12 @@
       </div>
       <h3 class="content_title">対戦ゲーム</h3>
       <div class="container">
+
+        <div class="left_space">
+          <p>制作したゲームの実行画面動画</p>
+          <video autoplay muted playsinline controls src="image/blackjack.mov" class="capture_video"></video>
+        </div>
+        
         <div class="right_space">
           <section class="flex">
             <div class="icon">
