プロフィール写真の変更の変更

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
 
         <div class="left_space">
-          <img src="image/profile.photo.png" class="profile_image" alt="長岡 勇輝（ながおか ゆうき）">
+          <img src="image/profile.photo.png" class="profile_image" alt="丸内　綜馬">
           <div class="sns">
             <ul class="text_center">
               <li><a href="https://twitter.com/MaruSo_career" class="twitter" target="_blank">Twitter</a></li>
@@ -223,7 +223,7 @@
           <p>制作したゲームの実行画面動画</p>
           <video autoplay muted playsinline controls src="image/blackjack.mov" class="capture_video"></video>
         </div>
-        
+
         <div class="right_space">
           <section class="flex">
             <div class="icon">
